# rna_tabu_2.0

./: .gitignore  CMakeLists.txt  Makefile  README.txt  foldMod.c  foldMod.c.old  foldMod.h  foldMod.h.old  get_barrier.c  get_barrier.h  pair_mat.h
test/: input0vs1.fas  input0vs1_small.fas  input0vs3.fas
